# swagger.yaml
@@ -12,6 +12,8 @@ paths:
     /auth/verify-email: {post: {operationId: sendVerificationCode, parameters: [], responses: {'201': {description: ""}}, tags: [Auth], security: [{bearer: []}]}}
     /auth/verify-email-code: {post: {operationId: verifyEmailCode, parameters: [], requestBody: {required: true, content: {application/json: {schema: {$ref: '#/components/schemas/VerityEmailCodeDto'}}}}, responses: {'201': {description: ""}}, tags: [Auth], security: [{bearer: []}]}}
     /auth/reset-password: {post: {operationId: resetPassword, parameters: [], requestBody: {required: true, content: {application/json: {schema: {$ref: '#/components/schemas/ResetPasswordDto'}}}}, responses: {'201': {description: ""}}, tags: [Auth], security: [{bearer: []}]}}
+    '/notifications/{userId}': {get: {operationId: getNotificationsForUser, parameters: [{name: userId, required: true, in: path, schema: {type: number}}], responses: {'200': {description: ""}}, tags: [Notifications], security: [{bearer: []}]}}
+    '/notifications/{notificationId}': {patch: {operationId: markNotificationAsRead, parameters: [{name: notificationId, required: true, in: path, schema: {type: number}}], responses: {'200': {description: ""}}, tags: [Notifications], security: [{bearer: []}]}}
     /inspections: {post: {operationId: createInspection, parameters: [], requestBody: {required: true, content: {application/json: {schema: {$ref: '#/components/schemas/AddInspectionDto'}}}}, responses: {'201': {description: ""}}, tags: [Inspections], security: [{bearer: []}]}, get: {operationId: getAllInspections, parameters: [], responses: {'200': {description: ""}}, tags: [Inspections], security: [{bearer: []}]}}
     '/inspections/{id}': {get: {operationId: getInspectionById, parameters: [{name: id, required: true, in: path, schema: {type: number}}], responses: {'200': {description: ""}}, tags: [Inspections], security: [{bearer: []}]}, put: {operationId: updateInspectionByAdmin, parameters: [{name: id, required: true, in: path, schema: {type: number}}], requestBody: {required: true, content: {application/json: {schema: {$ref: '#/components/schemas/UpdateInspectionDto'}}}}, responses: {'200': {description: ""}}, tags: [Inspections], security: [{bearer: []}]}, delete: {operationId: softDeleteInspection, parameters: [{name: id, required: true, in: path, schema: {type: number}}], responses: {'200': {description: ""}}, tags: [Inspections], security: [{bearer: []}]}}
     '/inspections/evaluate/{id}': {patch: {operationId: evaluateInspection, parameters: [{name: id, required: true, in: path, schema: {type: number}}], responses: {'200': {description: ""}}, tags: [Inspections], security: [{bearer: []}]}}
@@ -57,4 +59,4 @@ tags:
 servers: []
 components:
     securitySchemes: {bearer: {scheme: bearer, bearerFormat: JWT, type: http}}
-    schemas: {UpdateUserDto: {type: object, properties: {username: {type: string, description: 'The updated username of the user', minLength: 4, maxLength: 20, example: john_doe}, email: {type: string, description: 'The updated email address of the user', format: email, example: john.doe@example.com}, password: {type: string, description: 'The updated password of the user', minLength: 8, maxLength: 20, example: Abcd1234!}, oldpassword: {type: string, description: 'The updated password of the user', minLength: 8, maxLength: 20, example: Abcd1234!}, tel: {type: string, description: 'The updated telephone number of the user', minLength: 10, maxLength: 20, example: +1-541-754-3010}, role: {type: string, description: 'The role of the user', enum: [admin, user], example: admin}}}, UserRSubscribeDto: {type: object, properties: {email: {type: string, description: 'The email address of the user', format: email, example: john.doe@example.com}, role: {type: string, description: 'The role of the user', enum: [admin, user], example: admin}}}, LoginCredentialsDto: {type: object, properties: {email: {type: string, description: 'The email of the user', format: email, minLength: 5, maxLength: 255, example: user@example.com}, password: {type: string, description: 'The password of the user', minLength: 8, maxLength: 20, example: password123}}, required: [email, password]}, VerityEmailCodeDto: {type: object, properties: {}}, ResetPasswordDto: {type: object, properties: {}}, AddInspectionDto: {type: object, properties: {description: {type: string, description: 'La description de l''inspection', example: 'Vérification de l''état de la chaudière'}, datePrevue: {format: date-time, type: string, description: 'La date prévue de l''inspection', example: '2023-04-01'}, type: {type: string, description: 'Le type d''inspection', enum: [interne, externe]}, inspecteurId: {type: number, description: 'L''identifiant de l''inspecteur en charge de l''inspection', example: 1}, unitId: {type: number, description: 'L''identifiant de l''unité à inspecter', example: 2}}, required: [description, datePrevue, type]}, UpdateInspectionDto: {type: object, properties: {description: {type: string, description: 'Description de l''inspection', example: 'Inspection de sécurité mensuelle'}, datePrevue: {format: date-time, type: string, description: 'Date prévue de l''inspection', example: '2023-04-01'}, type: {type: string, description: 'Type d''inspection', enum: [interne, externe], example: externe}, inspecteurId: {type: number, description: 'Identifiant de l''inspecteur en charge de l''inspection', example: 1}, unitId: {type: number, description: 'Identifiant de l''unité inspectée', example: 2}}}, CreateInspectionUnitDto: {type: object, properties: {nom: {type: string, example: 'Nom de l''unité d''inspection', description: 'Le nom de l''unité d''inspection'}, code: {type: string, example: 'Code de l''unité d''inspection', description: 'Le code de l''unité d''inspection'}, institutionId: {type: number, example: '1', description: 'L''ID de l''institution à laquelle l''unité d''inspection appartient'}}, required: [nom, code, institutionId]}, UpdateInspectionUnitDto: {type: object, properties: {nom: {type: string, example: 'Nouveau nom de l''unité d''inspection', description: 'Le nouveau nom de l''unité d''inspection'}, code: {type: string, example: 'Nouveau code de l''unité d''inspection', description: 'Le nouveau code de l''unité d''inspection'}, institutionId: {type: number, example: '2', description: 'Le nouvel ID de l''institution à laquelle l''unité d''inspection appartient'}}, required: [nom, code, institutionId]}, AddEvaluationPointDto: {type: object, properties: {description: {type: string, description: 'La description de l''évaluation', example: 'Vérifier si la pièce est bien fixée'}, type: {type: string, description: 'Le type d''inspection pour lequel cette évaluation est destinée', enum: [interne, externe], example: interne}}, required: [description, type]}, UpdateEvaluationPointDto: {type: object, properties: {description: {type: string, description: 'La description de l''évaluation point à mettre à jour', example: 'Nouvelle description de l''évaluation point'}, type: {type: string, description: 'Le type de l''inspection associé à l''évaluation point', example: externe}}, required: [description, type]}, CreateBlocDto: {type: object, properties: {code: {type: string, example: B01, description: 'Code du bloc'}, nom: {type: string, example: 'Bloc A', description: 'Nom du bloc'}, etage: {type: number, example: 1, description: 'Numéro d''étage du bloc', minimum: 0}, inspectionUnitId: {type: number, example: 1, description: 'Identifiant de l''unité d''inspection associée au bloc'}}, required: [code, nom, etage, inspectionUnitId]}, UpdateBlocDto: {type: object, properties: {code: {type: string, example: B01, description: 'Le code du bloc. Doit être une chaîne de caractères.'}, nom: {type: string, example: 'Bloc A', description: 'Le nom du bloc. Doit être une chaîne de caractères.'}, etage: {type: number, example: 1, description: 'L''étage du bloc. Doit être un nombre entier supérieur ou égal à zéro.', minimum: 0}, inspectionUnitId: {type: number, example: 1, description: 'L''identifiant de l''unité d''inspection du bloc. Doit être un nombre entier.'}}}, CreateInstitutionDto: {type: object, properties: {nom: {type: string, description: 'Le nom de l''institution', example: 'Université de Paris'}, adresse: {type: string, description: 'L''adresse de l''institution', example: '5 Rue de l''Université, 75007 Paris, France'}, nature: {type: string, description: 'La nature de l''institution', example: 'hôpital '}, zoneId: {type: number, example: '1', description: 'L''ID de la zone  à laquelle l''institution appartient'}}, required: [nom, adresse, nature, zoneId]}, UpdateInstitutionDto: {type: object, properties: {nom: {type: string, description: 'Nom de l''institution', example: 'Université de Paris'}, adresse: {type: string, description: 'Adresse de l''institution', example: '5 Rue Thomas Mann, 75013 Paris'}, nature: {type: string, description: 'Nature de l''institution', example: hôpital}}}, CreateZoneDto: {type: object, properties: {nom: {type: string, description: 'Le nom de la zone géographique', example: sfax}}, required: [nom]}, UpdateZoneDto: {type: object, properties: {nom: {type: string, description: 'Nom de la zone', example: sfax}}}, CreateSousTraitantDto: {type: object, properties: {nom_contact: {type: string, description: 'Nom du contact du sous-traitant'}, tel_contact: {type: string, description: 'Numéro de téléphone du contact du sous-traitant'}, email_contact: {type: string, description: 'Adresse email du contact du sous-traitant'}, raison_sociale: {type: string, description: 'Raison sociale du sous-traitant'}}, required: [nom_contact, tel_contact, email_contact, raison_sociale]}, UpdateSousTraitantDto: {type: object, properties: {nom_contact: {type: string, description: 'Nouveau nom du contact du sous-traitant'}, tel_contact: {type: string, description: 'Nouveau numéro de téléphone du contact du sous-traitant'}, email_contact: {type: string, description: 'Nouvelle adresse email du contact du sous-traitant'}, raison_sociale: {type: string, description: 'Nouvelle raison sociale du sous-traitant'}}}, CreateContratDto: {type: object, properties: {date_debut: {format: date-time, type: string, description: 'La date de début du contrat', example: '2023-03-22'}, duree: {type: number, description: 'La durée du contrat en mois', example: 12}, institutionId: {type: number, description: 'L''ID de l''institution pour laquelle le contrat est établi', example: 1}, sousTraitantId: {type: number, description: 'L''ID du sous-traitant avec lequel le contrat est établi', example: 2}}, required: [date_debut, duree, institutionId, sousTraitantId]}, UpdateContratDto: {type: object, properties: {date_debut: {format: date-time, type: string, description: 'La nouvelle date de début du contrat', example: '2023-03-22'}, duree: {type: number, description: 'La nouvelle durée du contrat en mois', example: 6}, institutionId: {type: number, description: 'L''ID de la nouvelle institution pour laquelle le contrat est établi', example: 1}, sousTraitantId: {type: number, description: 'L''ID du nouveau sous-traitant avec lequel le contrat est établi', example: 3}}}}
+    schemas: {UpdateUserDto: {type: object, properties: {username: {type: string, description: 'The updated username of the user', minLength: 4, maxLength: 20, example: john_doe}, email: {type: string, description: 'The updated email address of the user', format: email, example: john.doe@example.com}, password: {type: string, description: 'The updated password of the user', minLength: 8, maxLength: 20, example: Abcd1234!}, oldpassword: {type: string, description: 'The updated password of the user', minLength: 8, maxLength: 20, example: Abcd1234!}, tel: {type: string, description: 'The updated telephone number of the user', minLength: 10, maxLength: 20, example: +1-541-754-3010}, role: {type: string, description: 'The role of the user', enum: [admin, user], example: admin}}}, UserRSubscribeDto: {type: object, properties: {email: {type: string, description: 'The email address of the user', format: email, example: john.doe@example.com}, role: {type: string, description: 'The role of the user', enum: [admin, user], example: admin}}}, LoginCredentialsDto: {type: object, properties: {email: {type: string, description: 'The email of the user', format: email, minLength: 5, maxLength: 255, example: admin@example.com}, password: {type: string, description: 'The password of the user', minLength: 8, maxLength: 20, example: admin123}}, required: [email, password]}, VerityEmailCodeDto: {type: object, properties: {}}, ResetPasswordDto: {type: object, properties: {}}, AddInspectionDto: {type: object, properties: {description: {type: string, description: 'La description de l''inspection', example: 'Vérification de l''état de la chaudière'}, datePrevue: {format: date-time, type: string, description: 'La date prévue de l''inspection', example: '2023-04-01'}, type: {type: string, description: 'Le type d''inspection', enum: [interne, externe]}, inspecteurId: {type: number, description: 'L''identifiant de l''inspecteur en charge de l''inspection', example: 1}, unitId: {type: number, description: 'L''identifiant de l''unité à inspecter', example: 2}}, required: [description, datePrevue, type]}, UpdateInspectionDto: {type: object, properties: {description: {type: string, description: 'Description de l''inspection', example: 'Inspection de sécurité mensuelle'}, datePrevue: {format: date-time, type: string, description: 'Date prévue de l''inspection', example: '2023-04-01'}, type: {type: string, description: 'Type d''inspection', enum: [interne, externe], example: externe}, inspecteurId: {type: number, description: 'Identifiant de l''inspecteur en charge de l''inspection', example: 1}, unitId: {type: number, description: 'Identifiant de l''unité inspectée', example: 2}}}, CreateInspectionUnitDto: {type: object, properties: {nom: {type: string, example: 'Nom de l''unité d''inspection', description: 'Le nom de l''unité d''inspection'}, code: {type: string, example: 'Code de l''unité d''inspection', description: 'Le code de l''unité d''inspection'}, institutionId: {type: number, example: '1', description: 'L''ID de l''institution à laquelle l''unité d''inspection appartient'}}, required: [nom, code, institutionId]}, UpdateInspectionUnitDto: {type: object, properties: {nom: {type: string, example: 'Nouveau nom de l''unité d''inspection', description: 'Le nouveau nom de l''unité d''inspection'}, code: {type: string, example: 'Nouveau code de l''unité d''inspection', description: 'Le nouveau code de l''unité d''inspection'}, institutionId: {type: number, example: '2', description: 'Le nouvel ID de l''institution à laquelle l''unité d''inspection appartient'}}, required: [nom, code, institutionId]}, AddEvaluationPointDto: {type: object, properties: {description: {type: string, description: 'La description de l''évaluation', example: 'Vérifier si la pièce est bien fixée'}, type: {type: string, description: 'Le type d''inspection pour lequel cette évaluation est destinée', enum: [interne, externe], example: interne}}, required: [description, type]}, UpdateEvaluationPointDto: {type: object, properties: {description: {type: string, description: 'La description de l''évaluation point à mettre à jour', example: 'Nouvelle description de l''évaluation point'}, type: {type: string, description: 'Le type de l''inspection associé à l''évaluation point', example: externe}}, required: [description, type]}, CreateBlocDto: {type: object, properties: {code: {type: string, example: B01, description: 'Code du bloc'}, nom: {type: string, example: 'Bloc A', description: 'Nom du bloc'}, etage: {type: number, example: 1, description: 'Numéro d''étage du bloc', minimum: 0}, inspectionUnitId: {type: number, example: 1, description: 'Identifiant de l''unité d''inspection associée au bloc'}}, required: [code, nom, etage, inspectionUnitId]}, UpdateBlocDto: {type: object, properties: {code: {type: string, example: B01, description: 'Le code du bloc. Doit être une chaîne de caractères.'}, nom: {type: string, example: 'Bloc A', description: 'Le nom du bloc. Doit être une chaîne de caractères.'}, etage: {type: number, example: 1, description: 'L''étage du bloc. Doit être un nombre entier supérieur ou égal à zéro.', minimum: 0}, inspectionUnitId: {type: number, example: 1, description: 'L''identifiant de l''unité d''inspection du bloc. Doit être un nombre entier.'}}}, CreateInstitutionDto: {type: object, properties: {nom: {type: string, description: 'Le nom de l''institution', example: 'Université de Paris'}, adresse: {type: string, description: 'L''adresse de l''institution', example: '5 Rue de l''Université, 75007 Paris, France'}, nature: {type: string, description: 'La nature de l''institution', example: 'hôpital '}, zoneId: {type: number, example: '1', description: 'L''ID de la zone  à laquelle l''institution appartient'}}, required: [nom, adresse, nature, zoneId]}, UpdateInstitutionDto: {type: object, properties: {nom: {type: string, description: 'Nom de l''institution', example: 'Université de Paris'}, adresse: {type: string, description: 'Adresse de l''institution', example: '5 Rue Thomas Mann, 75013 Paris'}, nature: {type: string, description: 'Nature de l''institution', example: hôpital}}}, CreateZoneDto: {type: object, properties: {nom: {type: string, description: 'Le nom de la zone géographique', example: sfax}}, required: [nom]}, UpdateZoneDto: {type: object, properties: {nom: {type: string, description: 'Nom de la zone', example: sfax}}}, CreateSousTraitantDto: {type: object, properties: {nom_contact: {type: string, description: 'Nom du contact du sous-traitant'}, tel_contact: {type: string, description: 'Numéro de téléphone du contact du sous-traitant'}, email_contact: {type: string, description: 'Adresse email du contact du sous-traitant'}, raison_sociale: {type: string, description: 'Raison sociale du sous-traitant'}}, required: [nom_contact, tel_contact, email_contact, raison_sociale]}, UpdateSousTraitantDto: {type: object, properties: {nom_contact: {type: string, description: 'Nouveau nom du contact du sous-traitant'}, tel_contact: {type: string, description: 'Nouveau numéro de téléphone du contact du sous-traitant'}, email_contact: {type: string, description: 'Nouvelle adresse email du contact du sous-traitant'}, raison_sociale: {type: string, description: 'Nouvelle raison sociale du sous-traitant'}}}, CreateContratDto: {type: object, properties: {date_debut: {format: date-time, type: string, description: 'La date de début du contrat', example: '2023-03-22'}, duree: {type: number, description: 'La durée du contrat en mois', example: 12}, institutionId: {type: number, description: 'L''ID de l''institution pour laquelle le contrat est établi', example: 1}, sousTraitantId: {type: number, description: 'L''ID du sous-traitant avec lequel le contrat est établi', example: 2}}, required: [date_debut, duree, institutionId, sousTraitantId]}, UpdateContratDto: {type: object, properties: {date_debut: {format: date-time, type: string, description: 'La nouvelle date de début du contrat', example: '2023-03-22'}, duree: {type: number, description: 'La nouvelle durée du contrat en mois', example: 6}, institutionId: {type: number, description: 'L''ID de la nouvelle institution pour laquelle le contrat est établi', example: 1}, sousTraitantId: {type: number, description: 'L''ID du nouveau sous-traitant avec lequel le contrat est établi', example: 3}}}}
